# optionality

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml  renovate.json
.github/workflows/: update-data.yml
src/optionality/: __init__.py  config.py  logger.py  parsers.py  polygon_client.py  validators.py
src/optionality/calculators/: __init__.py  technical.py
src/optionality/commands/: __init__.py  delta_commands.py
src/optionality/loaders/: __init__.py  boundary_detector.py  data_source.py  flatfile_loader.py  options_loader.py  s3_filesystem.py  stock_loader.py  stock_loader_gap_check.py
src/optionality/splits/: __init__.py  adjuster.py
src/optionality/storage/: delta_manager.py
src/optionality/sync/: __init__.py  splits.py  tickers.py
src/optionality/verify/: __init__.py  spot_checker.py
tests/: test_parsers.py
